# Hydra-client-c

./: .project  DESCRIPTION  Makefile.am  Makefile.in  RELEASE-NOTES  VERSION  aclocal.m4  bootstrap  build.xml  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: Doxyfile
doc/: Makefile.am  example.services.xml
doc/apidoc/: Doxyfile.template  Makefile.am  doxygen.init  footer.html
doc/autogen/html/: dir_000000.html  dir_000001.html  dir_000002.html  dir_000003.html  dir_000004.html  dirs.html  eds-simple_8h-source.html  eds-simple_8h.html  files.html  functions_rela.html  globals.html  globals_func.html  index.html
doc/autogen/latex/: dir_000000.tex  dir_000001.tex  dir_000002.tex  dir_000003.tex  dir_000004.tex  dirs.tex  doxygen.sty  eds-simple_8h.tex  files.tex  refman.tex
doc/html/: Makefile.am
doc/man/: Makefile.am  common-gliteio-env.xml  common-hydra-arg-desc.xml  common-hydra-args.xml  common-hydra-env.xml  common-hydra-serv-arg.xml  common-hydra-serv-desc.xml  glite-eds-chmod.1.xml  glite-eds-decrypt.1.xml  glite-eds-encrypt.1.xml  glite-eds-get.1.xml  glite-eds-getacl.1.xml  glite-eds-key-register.1.xml  glite-eds-key-unregister.1.xml  glite-eds-put.1.xml  glite-eds-rm.1.xml  glite-eds-setacl.1.xml
interface/: Makefile.am  Makefile.in
interface/glite/data/catalog/c/: catalog-simple.h
interface/glite/data/catalog/metadata/c/: metadata-simple.h
interface/glite/data/hydra/c/: eds-simple.h
project/: ares.m4  boost.m4  build.number  build.properties  cgsi-gsoap.m4  condorg.m4  configure.properties.xml  cppunit.m4  e-c_org.glite.data.hydra-cli.ini  e-m_org.glite.data.hydra-cli.ini  expat.m4  fcgi.m4  glite-version.m4  glite_dgas.m4  glite_dgas_common.m4  glite_lb.m4  glite_security.m4  glite_service_discovery.m4  glite_wms.m4  glite_wmsutils.m4  glite_wsdl_file.m4  globus.m4  gridsite.m4  gsoap-fix.m4  libtar.m4  log4cxx.m4  myproxy.m4  optimize.m4  oracle-instantclient.m4  properties.xml  runtime.dependencies  version.properties  xalan.m4  xerces.m4  xml2.m4  zlib.m4
src/: Makefile.am  Makefile.in
src/autogen/: config.h.in
src/c/: Makefile.am  Makefile.in  catalog-simple-api.c  datatypes.c  eds-simple.c  internal.h  metadata-simple-api.c  metadata_internal.h  metadata_soapconv.c  soapconv.c
src/utils/: Makefile.am  Makefile.in  eds-chmod.c  eds-decrypt.c  eds-encrypt.c  eds-encrypt.cxx  eds-getacl.c  eds-getfile.c  eds-getfile.cxx  eds-putfile.c  eds-putfile.cxx  eds-register.c  eds-registerfile.cxx  eds-setacl.c  eds-unlinkfile.c  eds-unlinkfile.cxx  eds-unregister.c  meta-tool-main.c  tool-main.h  util.c
test/: hydra-only-test.sh  services-missing.xml  services.xml
