#
#  Copyright (c) Members of the EGEE Collaboration. 2004-2007.
#  See http://eu-egee.org/partners/ for details on the copyright holders.
#  For license conditions see the license file or http://eu-egee.org/license.html
#
#  Common Makefile.am file for the GLite Encrypted Data Storage module
#
#  Authors: Zoltan Farkas <Zoltan.Farkas@cern.ch>
#

SUBDIRS		= interface src doc

commonutdir = $(datadir)/doc/$(PACKAGE)
dist_commonut_DATA = RELEASE-NOTES LICENSE

## Default flags to run aclocal
ACLOCAL_AMFLAGS = -I project

AUTOMAKE_OPTIONS = foreign

MAINTAINERCLEANFILES = Makefile.in
