#
#  Copyright (c) Members of the EGEE Collaboration. 2004.
#  See http://eu-egee.org/partners/ for details on the copyright holders.
#  For license conditions see the license file or http://eu-egee.org/license.html
#
#  Common doc/Makefile.am file for the GLite Data IO Client module
#
#  Authors: Akos.Frohner <Akos.Frohner@cern.ch>
#  Version info: $Id: Makefile.am,v 1.2 2006-04-11 13:24:28 szamsu Exp $
#  Release: $Name: not supported by cvs2svn $
#
#
SUBDIRS = . apidoc man
commonutdir = $(datadir)/doc/$(PACKAGE)
dist_commonut_DATA = example.services.xml

MAINTAINERCLEANFILES = Makefile.in
