#
#  Copyright (c) Members of the EGEE Collaboration. 2005.
#  See http://eu-egee.org/partners/ for details on the copyright holders.
#  For license conditions see the license file or http://eu-egee.org/license.html
#
#  interface/Makefile.am file for the gLite Encrypted Data Storage Interface module
#
#  Authors: Zoltan Farkas <Zoltan.Farkas@cern.ch>
#

nobase_include_HEADERS = glite/data/hydra/c/eds-simple.h
