#
#  Copyright (c) Members of the EGEE Collaboration. 2004.
#  See http://eu-egee.org/partners/ for details on the copyright holders.
#  For license conditions see the license file or http://eu-egee.org/license.html
#
#  Common src/Makefile.am file for the GLite Encrypted Data Storage module
#
#  Authors: Zoltan Farkas <Zoltan.Farkas@cern.ch>
#

SUBDIRS		= c utils
