#
#  Copyright (c) Members of the EGEE Collaboration. 2004.
#  See http://eu-egee.org/partners/ for details on the copyright holders.
#  For license conditions see the license file or http://eu-egee.org/license.html
#
#  Common doc/html/Makefile.am file for the GLite Data IO Client module
#
#  Authors: Akos Frohner <Akos.Frohner@cern.ch>
#  Version info: $Id: Makefile.am,v 1.1 2005-10-20 08:26:53 szamsu Exp $
#  Release: $Name: not supported by cvs2svn $
#
#
commonutdir = $(datadir)/doc/$(PACKAGE)/html
dist_commonut_DATA = \
	dir_000000.html \
	dir_000001.html \
	dir_000002.html \
	dir_000003.html \
	dir_000004.html \
	dirs.html \
	doxygen.css \
	doxygen.png \
	eds-simple_8h-source.html \
	eds-simple_8h.html \
	files.html \
	globals.html \
	globals_func.html \
	index.html

MAINTAINERCLEANFILES = Makefile.in
